--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^18.0.6",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
+    "package.json": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
