--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
+        "eslint-plugin-prettier": "^4.2.1",
         "mobx": "^6.6.1",
         "mobx-react": "^7.5.2",
+        "openapi-generator": "^0.1.39",
         "package.json": "^0.0.0",
         "prettier": "^2.7.1",
         "react": "^18.2.0",
@@ -28,6 +30,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "generate": "openapi-generator-cli generate -i http://localhost:8080/api-json -g typescript-axios -o src/generated-api/",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -52,12 +55,22 @@
         ]
     },
     "devDependencies": {
+        "@openapitools/openapi-generator-cli": "^2.5.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^18.7.5",
         "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.36.1",
+        "@typescript-eslint/parser": "^5.36.1",
         "cors": "^2.8.5",
+        "eslint": "8.22.0",
+        "eslint-config-standard-with-typescript": "^22.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.2.5",
+        "eslint-plugin-promise": "^6.0.1",
+        "eslint-plugin-react": "^7.31.6",
         "express": "^4.18.1",
-        "typescript": "^4.7.4"
+        "swagger-codegen": "^0.1.1",
+        "typescript": "^4.8.2"
     }
 }
